src/main/java/org/example/Solid/good/i/ISP_good.java
package org.example.Solid.good.i;

public class ISP_good {
}
