src/main/java/org/example/Solid/bad/i/ISP_bad.java
package org.example.Solid.bad.i;

public class ISP_bad {
}
